# chat

./: CMakeLists.txt
client/: CMakeLists.txt
client/authorization/: AuthorizationWindow.cpp  AuthorizationWindow.h  AuthorizationWindow.ui
client/main/: Main.cpp
client/mainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
server/: CMakeLists.txt
server/connection/: Connection.cpp  Connection.h
server/main/: Main.cpp
server/server/: Server.cpp  Server.h
